concepts/network-policy/policy/allow-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-policy
spec:
  podSelector:
    matchLabels:
      policy: allow-egress-policy 
  egress:
  - {}
  policyTypes:
    - Egress
