concepts/network-policy/policy/allow-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-policy
spec:
  podSelector:
    matchLabels:
      policy: allow-ingress-policy 
  ingress:
  - {}
  policyTypes:
    - Ingress
