concepts/network-policy/policy/deny-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-policy
spec:
  podSelector:
    matchLabels:
      policy: deny-egress-policy 
  policyTypes:
    - Egress
