concepts/network-policy/policy/deny-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-policy
spec:
  podSelector:
    matchLabels:
      policy: deny-ingress-policy 
  policyTypes:
    - Ingress
